Changed many items of the API

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: form
 description: Easy form validation and state management
-version: 0.0.1
+version: 0.0.2
 homepage: https://github.com/EdsonOnildoJR/form
 
 environment:
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   validators: ^2.0.0+1
+  rxdart: ^0.24.0
 
 dev_dependencies:
   flutter_test:
