--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,12 @@
-os:
-  - linux
-sudo: false
+language: dart
+dist: xenial
 addons:
   apt:
-    # Flutter depends on /usr/lib/x86_64-linux-gnu/libstdc++.so.6 version GLIBCXX_3.4.18
-    sources:
-      - ubuntu-toolchain-r-test # if we don't specify this, the libstdc++6 we get is the wrong version
     packages:
-      - libstdc++6
-      - fonts-droid-fallback
-before_script:
+      - lib32stdc++6
+install:
   - git clone https://github.com/flutter/flutter.git -b beta
   - ./flutter/bin/flutter doctor
-  - ./flutter/bin/flutter pub get
 script:
   - ./flutter/bin/flutter test
 cache:
