--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: form
 description: Uma forma simples e poderosa para manipulação de formulários em flutter.
-version: 0.0.3+2
+version: 0.0.4
 homepage: https://github.com/EdsonOnildoJR/form
 
 environment:
